--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "Eve",
-    "Online"
+    "Eve Online"
   ],
   "author": "Juan Pol",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jpol0191/eve_sde_json.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jpol0191/eve_sde_json/issues"
+  },
+  "homepage": "https://github.com/jpol0191/eve_sde_json#readme"
 }
